crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__weave__I038-conditional-choice-in-weave.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/weave/I038-conditional-choice-in-weave
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "start\n" [Continue]
> "gather should be seen\n" [Choices: "go to a stitch" (0) -> 0]
> "result\n" [Ended]
outcome: Ended
