crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__weave__I042-weave-options.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/weave/I042-weave-options
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "Hello." (0) -> 0]
> "Hello, world.\n" [Ended]
outcome: Ended
