crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__weave__I043-weaves-within-sequence.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/weave/I043-weaves-within-sequence
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "choice" (0) -> 0]
> "choice\n" [Continue]
> "nextline\n" [Ended]
outcome: Ended
