crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__weave__unbalanced-weave-indentation.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/weave/unbalanced-weave-indentation
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0] === PASS
> "" [Choices: "First" (0) -> 0]
> "First\n" [Choices: "Very indented" (0) -> 0]
> "Very indented\n" [Continue]
> "End\n" [Ended]
outcome: Ended
